--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -11,10 +11,10 @@
      <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
         {% endif %}
         <h2>{{ post.title }}</h2>
-        <p> GAME {{ post.game|linebreaksbr }}</p>
-        <p>{{ post.text|linebreaksbr }}</p>
-        <p>{{ post.gamepublisher|linebreaksbr }}</p>
-        <p>{{ post.genre|linebreaksbr }}</p>
-        <p>{{ post.author|linebreaksbr }}</p>
+           <p> Game: {{ post.game|linebreaksbr }}</p> 
+           <p> Genre: {{ post.genre|linebreaksbr }}</p> 
+           <p> Gamepublisher: {{ post.gamepublisher|linebreaksbr }}</p> 
+           <p> Autor: {{ post.author|linebreaksbr }}</p> 
+           <p>{{ post.text|linebreaksbr }}</p>
     </div>
 {% endblock %}
