--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,18 +1,18 @@
 h1 a, h2 a {
-    color: #C25100;
+    color: blue;
     font-family: 'Saira Semi Condensed', sans-serif;
 }
 body {
     padding-left: 15px;
 }
 .page-header {
-    background-color: #C25100;
+    background-color: blue;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: blue;
     font-size: 36pt;
     
 }
