--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,12 +1,12 @@
 h1 a, h2 a {
-    color: blue;
+    color: green;
     font-family: 'Saira Semi Condensed', sans-serif;
 }
 body {
     padding-left: 15px;
 }
 .page-header {
-    background-color: blue;
+    background-color: green;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -31,7 +31,7 @@ h1, h2, h3, h4 {
 
 .save {
     float: right;
-}
+
 
 .post-form textarea, .post-form input {
     width: 100%;
