--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,18 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+           <div id="SamplePlayerDivID"></div>
+           <script type="text/javascript">
+           var options = {
+           width: 854,
+           height: 480,
+           channel: "lck",
+           };
+           var player = new Twitch.Player("SamplePlayerDivID", options);
+           player.setVolume(0.5);
+           </script>
+           <br>
     {% for post in posts reversed %}
         <div class="post">
             <div class="date">
