--- a/events/static/css/events.css
+++ b/events/static/css/events.css
@@ -3,13 +3,12 @@ h1 a, h2 a {
     font-family: 'Russo One', sans-serif;
 }
 body {
-    padding-left: 20px;
+    padding-left: 15px;
 }
 .page-header {
     background-color: rgb(47, 47, 209);
     margin-top: 0;
     padding: 20px 20px 20px 40px;
-    
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -36,7 +35,7 @@ p {
     float: right;
 
 
-.post-form textarea, .post-form input {
+.event-form textarea, .event-form input {
     width: 100%;
 }
 
@@ -47,10 +46,10 @@ p {
     margin-right: 20px;
 }
 
-.post {
+.event {
     margin-bottom: 70px;
 }
 
-.post h2 a, .post h2 a:visited {
+.event h2 a, .post h2 a:visited {
     color: #000000;
 }
