--- a/events/templates/events/event_base.html
+++ b/events/templates/events/event_base.html
@@ -7,28 +7,17 @@
         <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Black+Ops+One&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="{% static 'css/events.css' %}">
     </head>
     <body>
         <div class="page-header">
-            <div class="container">
-                    <div class="row">
-                            <div class="col-md-8">
-                                <h1><a href="/">Gamers Paradise</a></h1>
-                            </div>
-                            <div class="col-md-2">
-                                <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                            </div>
-                            <div class="col-md-2"></div>
-                                <img src="https://d2q79iu7y748jz.cloudfront.net/s/_squarelogo/a1d18cba8a6b1db5979d854463b70a56" width="100" height="100">
-                                
-                            </div>
-                    </div>
-            </div>
+            <a href="{% url 'event_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <h1><a href="/">Gamers Paradise</a></h1>
         </div>
         <br>
-        <h1><a href="{% url 'event_list' %}">Zu den Events</a></h1>
-        
+        <h1><a href="{% url 'event_list' %}">Events</a></h1>
+        <br> 
+       
         <br>
         <br>
         
