--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<h1><a href="{% url 'event_list' %}">Zu den Events</a></h1>
+<br>
+        <br>
 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
            <div id="SamplePlayerDivID"></div>
            <script type="text/javascript">
