--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,16 +14,17 @@
             <div class="page-header">
                     <div class="container">
                             <div class="row">
-                                    <div class="col-md-8">
-                                        <h1><a href="/">Gamers Paradise</a></h1>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                                    </div>
-                                    <div class="col-md-2"></div>
+                                    <div class="col-md-3">
                                         <img src="https://d2q79iu7y748jz.cloudfront.net/s/_squarelogo/a1d18cba8a6b1db5979d854463b70a56" width="100" height="100">
                                         
                                     </div>
+                                    <div class="col-md-7">
+                                        <h1><a href="/">Gamers Paradise</a></h1>
+                                    </div>
+                                   <div class="col-md-2">
+                                        <h1><a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-pushpin"></span></a></h1>
+                                    </div> 
+                                    
                             </div>
                     </div>
                 </div>
