--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,15 +1,33 @@
-h1 a, h2 a {
-    color:  rgb(47, 47, 209);
+h1 a {
+    color:  rgb(0, 0, 0);
     font-family: 'Russo One', sans-serif;
+}
+h2 a {
+    color:  rgb(64, 197, 179);
+    font-family: 'Russo One', sans-serif;
+}
+h3 a  {
+    color:  rgb(41, 185, 166);
+    font-family: 'Russo One', sans-serif;
+}
+h4 a  {
+    color:  rgb(250, 250, 250);
+    font-family: 'Black Ops One', cursive;
 }
 body {
     padding-left: 20px;
+    background-color: grey;
 }
 .page-header {
-    background-color: rgb(47, 47, 209);
+    background-color: rgb(147, 52, 167);
     margin-top: 0;
     padding: 20px 20px 20px 40px;
     
+}
+
+h3 a  {
+    color:  rgb(41, 185, 166);
+    font-family: 'Russo One', sans-serif;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
@@ -47,11 +65,13 @@ p {
     margin-right: 20px;
 }
 
-.post {
+.post { 
     margin-bottom: 70px;
 }
 
 .post h2 a, .post h2 a:visited {
+    padding: 10px;
     color: #000000;
 }
+
 
