--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -1,32 +1,54 @@
 {% extends 'events/event_base.html' %}
 
 {% block content %}
-<div class="col-lg-36">
-<h3>Stream</h3>
-<script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-<div id="SamplePlayerDivID"></div>
-<script type="text/javascript">
-var options = {
-width: 854,
-height: 480,
-channel: "lck",
-};
-var player = new Twitch.Player("SamplePlayerDivID", options);
-player.setVolume(0.5);
-</script>
-</div>
-<br>
-    {% for event in events reversed %}
-        <div class="event">
-            <div class="date">
-                {{ event.published_date }}
+<div class="row">
+    <div class="col-md-6">
+        <h1>Events</h1>
+        <br>
+        <br>
+        <br>
+
+
+        {% for event in events reversed %}
+        <div class="bg-warning"> 
+            <div class="event">
+                <div class="date">
+                    {{ event.published_date }}
+                </div>
+                <h1><a href="{% url 'event_detail' pk=event.pk %}">{{ event.title }}</a></h1>
+            <p> Zeitpunkt: {{ event.zeitpunkt|linebreaksbr }}</p> 
+            <p> Autor: {{ event.author|linebreaksbr }}</p> 
+            <p>{{ event.text|linebreaksbr }}</p>
+           
             </div>
-            <h1><a href="{% url 'event_detail' pk=event.pk %}">{{ event.title }}</a></h1> 
-            
-           <p> Autor: {{ event.author|linebreaksbr }}</p> 
-           <p>{{ event.text|linebreaksbr }}</p>
-            
+        </div> 
+        <br>
+        <br>
+        {% endfor %}
+    </div>
+    <br>
+    <br>
+    <div class="col-md-5">
+        <button type="button" class="btn btn-primary"><h4><a href="{% url 'post_list' %}">Zurück zu den Blogposts</a></h4></button>
+        <br>
+        <br>
+    </div>
+    
+        <div class="col-md-2 col-md-offset-2">
+            <h3>Stream</h3>
+            <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+                <div id="SamplePlayerDivID"></div>
+                <script type="text/javascript">
+                var options = {
+                width: 454,
+                height: 280,
+                channel: "lck",
+                };
+                var player = new Twitch.Player("SamplePlayerDivID", options);
+                player.setVolume(0.5);
+                </script>
+                <br>
+                </div>
         </div>
-        <br> <br>
-    {% endfor %}
+</div>
 {% endblock %}
