--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -42,6 +42,7 @@ h3 a  {
 
 h1, h2, h3, h4 {
     font-family: 'Russo One', sans-serif;
+    color: white;
 }
 p {
     font-family: 'Saira Semi Condensed', sans-serif;
@@ -74,4 +75,6 @@ p {
     color: #000000;
 }
 
-
+.bg-warning {
+    margin-left: 10px;
+}
