--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,20 +1,29 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <div class="post">
-        {% if post.published_date %}
-            <div class="date">
-                {{ post.published_date }}
+<div class="container">
+<div class="row">
+    <div class="col-md-10">
+        <div class="post">
+            {% if post.published_date %}
+                <div class="date">
+                    {{ post.published_date }}
+                </div>
+            {% endif %}
+            {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+            {% endif %}
+            <h1><a>{{ post.title }}</a></h1>
+            <p> Game: {{ post.game|linebreaksbr }}</p> 
+            <p> Genre: {{ post.genre|linebreaksbr }}</p> 
+            <p> Gamepublisher: {{ post.gamepublisher|linebreaksbr }}</p> 
+            <p> Autor: {{ post.author|linebreaksbr }}</p> 
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div> </div>
+        <div class="col-md-2">
+                <h1><a href="{% url 'post_list' %}" class="top-menu"><span class="glyphicon glyphicon-remove"></span></a></h1>
             </div>
-        {% endif %}
-        {% if user.is_authenticated %}
-     <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        {% endif %}
-        <h2>{{ post.title }}</h2>
-           <p> Game: {{ post.game|linebreaksbr }}</p> 
-           <p> Genre: {{ post.genre|linebreaksbr }}</p> 
-           <p> Gamepublisher: {{ post.gamepublisher|linebreaksbr }}</p> 
-           <p> Autor: {{ post.author|linebreaksbr }}</p> 
-           <p>{{ post.text|linebreaksbr }}</p>
+            
+    </div>
     </div>
 {% endblock %}
