--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,9 +1,21 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h2>New post</h2>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
+<div class="container">
+<div class="row">
+        <div class="col-md-10">
+             <h2>New Post</h2>
+        <form method="POST" class="post-form">{% csrf_token %}
+             {{ form.as_p }}
+            <button type="submit" class="save btn btn-default">Save</button>
+        </form>   
+        </div>
+       
+        <div class="col-md-2">
+            <h1><a href="{% url 'post_list' %}" class="top-menu"><span class="glyphicon glyphicon-remove"></span></a></h1>
+        </div>
+        
+</div>
+</div>
+    
 {% endblock %}
