--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -1,18 +1,28 @@
 {% extends 'events/event_base.html' %}
 
 {% block content %}
-    <div class="event">
-        {% if event.published_date %}
-            <div class="date">
-                {{ event.published_date }}
-            </div>
-        {% endif %}
-        {% if user.is_authenticated %}
-     <a class="btn btn-default" href="{% url 'event_edit' pk=event.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-        {% endif %}
-        <h2>{{ event.title }}</h2>
-           
-           <p> Autor: {{ event.author|linebreaksbr }}</p> 
-           <p>{{ event.text|linebreaksbr }}</p>
-    </div>
+<div class="container">
+        <div class="row">
+                <div class="col-md-10">
+                    <div class="event">
+                        {% if event.published_date %}
+                            <div class="date">
+                                {{ event.published_date }}
+                            </div>
+                        {% endif %}
+                        {% if user.is_authenticated %}
+                        <a class="btn btn-default" href="{% url 'event_edit' pk=event.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                        {% endif %}
+                        <h1><a>{{ event.title }}</a></h1>
+                        <p> Zeitpunkt: {{ event.zeitpunkt|linebreaksbr }}</p> 
+                        <p> Autor: {{ event.author|linebreaksbr }}</p> 
+                        <p>{{ event.text|linebreaksbr }}</p>
+                        </div>
+                </div>
+                <div class="col-md-2">
+                            <h1><a href="{% url 'event_list' %}" class="top-menu"><span class="glyphicon glyphicon-remove"></span></a></h1>
+                </div>
+                        
+        </div>
+</div>
 {% endblock %}
