--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -16,7 +16,7 @@ h4 a  {
 }
 body {
     padding-left: 20px;
-    background-color: grey;
+    background-color: rgb(206, 202, 202);
 }
 .page-header {
     background-color: rgb(147, 52, 167);
