--- a/events/static/css/events.css
+++ b/events/static/css/events.css
@@ -42,7 +42,7 @@ h3 a  {
 
 h1, h2, h3, h4 {
     font-family: 'Russo One', sans-serif;
-    color:white;
+    color: black;
 }
 p {
     font-family: 'Saira Semi Condensed', sans-serif;
