--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -21,6 +21,7 @@
             <p> Gamepublisher: {{ post.gamepublisher|linebreaksbr }}</p> 
             <p> Autor: {{ post.author|linebreaksbr }}</p> 
             <p>{{ post.text|linebreaksbr }}</p>
+            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
             
             
             </div>
