--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -17,7 +17,7 @@
             <p> Game: {{ post.game|linebreaksbr }}</p> 
             <p> Genre: {{ post.genre|linebreaksbr }}</p> 
             <p> Gamepublisher: {{ post.gamepublisher|linebreaksbr }}</p> 
-            <p> Autor: {{ post.author|linebreaksbr }}</p> 
+            <p> Author: {{ post.author|linebreaksbr }}</p> 
             <p>{{ post.text|linebreaksbr }}</p>
         </div> </div>
         <div class="col-md-2">
