--- a/events/templates/events/event_detail.html
+++ b/events/templates/events/event_detail.html
@@ -15,7 +15,8 @@
                         {% endif %}
                         <h1><a>{{ event.title }}</a></h1>
                         <p> Zeitpunkt: {{ event.zeitpunkt|linebreaksbr }}</p> 
-                        <p> Autor: {{ event.author|linebreaksbr }}</p> 
+                        <p> Author: {{ event.author|linebreaksbr }}</p> 
+                        <p> Twitch-Link: {{ event.twitchlink|linebreaksbr }}</p> 
                         <p>{{ event.text|linebreaksbr }}</p>
                         </div>
                 </div>
