--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -1,9 +1,20 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<div class="container">
+        <div class="row">
+                <div class="col-md-10">
     <h1>New comment</h1>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Send</button>
     </form>
+    </div>
+
+
+    <div class="col-md-2">
+            <h1><a href="{% url 'post_list' %}" class="top-menu"><span class="glyphicon glyphicon-remove"></span></a></h1>
+        </div>
+        </div>
+        </div>
 {% endblock %}
