--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,14 +13,14 @@
             <div class="page-header">
                     <div class="container">
                             <div class="row">
-                                    <div class="col-md-3">
+                                    <div class="col-xs-3">
                                         <img src="https://d2q79iu7y748jz.cloudfront.net/s/_squarelogo/a1d18cba8a6b1db5979d854463b70a56" width="100" height="100">
                                         
                                     </div>
-                                    <div class="col-md-7">
+                                    <div class="col-xs-7">
                                         <h1><a href="/">Gamers Paradise</a></h1>
                                     </div>
-                                   <div class="col-md-2">
+                                   <div class="col-xs-2">
                                         {% if user.is_authenticated %}
                                         <h1><a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-pushpin"></span></a></h1>
                                         {% endif %}
@@ -36,7 +36,7 @@
 
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-12">
                     {% block content %}
                     {% endblock %}
                 </div>
