--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -2,40 +2,18 @@
 
 {% block content %}
 <div class="row">
-    <div class="col-md-6">
-        <h1>Events</h1>
+    
+    
+    <div class="col-md-7">
         <br>
-        <br>
-        <br>
-
-
-        {% for event in events reversed %}
-        <div class="bg-warning"> 
-            <div class="event">
-                <div class="date">
-                    {{ event.published_date }}
-                </div>
-                <h1><a href="{% url 'event_detail' pk=event.pk %}">{{ event.title }}</a></h1>
-            <p> Zeitpunkt: {{ event.zeitpunkt|linebreaksbr }}</p> 
-            <p> Autor: {{ event.author|linebreaksbr }}</p> 
-            <p>{{ event.text|linebreaksbr }}</p>
-           
-            </div>
-        </div> 
-        <br>
-        <br>
-        {% endfor %}
-    </div>
-    <br>
-    <br>
-    <div class="col-md-5">
         <button type="button" class="btn btn-primary"><h4><a href="{% url 'post_list' %}">Zurück zu den Blogposts</a></h4></button>
         <br>
         <br>
-    </div>
+        <div class="row">
+   
     
-        <div class="col-md-2 col-md-offset-2">
-            <h3>Stream</h3>
+        <div class="col-md-5 col-md-offset-2">
+            <h3>Our Sponsor</h3>
             <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
                 <div id="SamplePlayerDivID"></div>
                 <script type="text/javascript">
@@ -47,8 +25,68 @@
                 var player = new Twitch.Player("SamplePlayerDivID", options);
                 player.setVolume(0.5);
                 </script>
+                <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+                <div id="SamplePlayerDivID"></div>
+                <script type="text/javascript">
+                var options = {
+                width: 454,
+                height: 280,
+                channel: "NoWay4u_Sir",
+                };
+                var player = new Twitch.Player("SamplePlayerDivID", options);
+                player.setVolume(0.5);
+                </script>
+                 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+                 <div id="SamplePlayerDivID"></div>
+                 <script type="text/javascript">
+                 var options = {
+                 width: 454,
+                 height: 280,
+                 channel: "Dathrix",
+                 };
+                 var player = new Twitch.Player("SamplePlayerDivID", options);
+                 player.setVolume(0.5);
+                 </script>
+                  <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
+                  <div id="SamplePlayerDivID"></div>
+                  <script type="text/javascript">
+                  var options = {
+                  width: 454,
+                  height: 280,
+                  channel: "Harmii",
+                  };
+                  var player = new Twitch.Player("SamplePlayerDivID", options);
+                  player.setVolume(0.5);
+                  </script>
                 <br>
                 </div>
         </div>
-</div>
+    </div>
+                <div class="col-md-5">
+                        <h1>Events</h1>
+                        <br>
+                        <br>
+                        <br>
+                
+                
+                        {% for event in events reversed %}
+                        <div class="bg-warning"> 
+                            <div class="event">
+                                <div class="date">
+                                    {{ event.published_date }}
+                                </div>
+                                <h1><a href="{% url 'event_detail' pk=event.pk %}">{{ event.title }}</a></h1>
+                            <p> Zeitpunkt: {{ event.zeitpunkt|linebreaksbr }}</p> 
+                            <p> Author: {{ event.author|linebreaksbr }}</p> 
+                            <p> Twitch-Link: {{ event.twitchlink|linebreaksbr }}</p> 
+                            <p>{{ event.text|linebreaksbr }}</p>
+                           
+                            </div>
+                        </div> 
+                        <br>
+                        <br>
+                        {% endfor %}
+                    </div>
+        </div>
+
 {% endblock %}
