--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,6 +4,7 @@
         <title>Gamers Paradise</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css?family=Russo+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Saira+Semi+Condensed&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Black+Ops+One&display=swap" rel="stylesheet">
@@ -17,7 +18,7 @@
                                         <img src="https://d2q79iu7y748jz.cloudfront.net/s/_squarelogo/a1d18cba8a6b1db5979d854463b70a56" width="100" height="100">
                                         
                                     </div>
-                                    <div class="col-xs-7">
+                                    <div class="col-xs-6">
                                         <h1><a href="/">Gamers Paradise</a></h1>
                                     </div>
                                    <div class="col-xs-2">
@@ -28,19 +29,36 @@
                                     
                             </div>
                     </div>
+                    <br>
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                            <a class="navbar-brand" href="{% url 'post_list' %}"> Zurück zur Homepage </a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                              <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                              <div class="navbar-nav">
+                                <a class="nav-item nav-link" href="{% url 'post_list' %}"> Zu den Posts </a>
+                                <a class="nav-item nav-link" href="{% url 'event_list' %}"> Zu den Events </a>
+                                
+                                {% if user.is_authenticated %}<a class="nav-item nav-link" href="{% url 'post_new' %}"> Blogeintrag erstellen </a>{% endif %}
+                                {% if user.is_authenticated %}<a class="nav-item nav-link" href="{% url 'event_new' %}"> Event erstellen </a>{% endif %}
+                              </div>
+                            </div>
+                          </nav>
                 </div>
-        <br>
         
         
         
+             
 
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-12">
+                 
+
+        
                     {% block content %}
                     {% endblock %}
-                </div>
-            </div>
-        </div>
+               
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
