--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container">
 <div class="row">
-        <div class="col-md-10">
-             <h2>New Post</h2>
+        <div class="col-md-9">
+             <h1>Neuer Post</h1>
         <form method="POST" class="post-form">{% csrf_token %}
              {{ form.as_p }}
             <button type="submit" class="save btn btn-default">Save</button>
