--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,24 +1,90 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://coverfiles.alphacoders.com/390/39090.jpg" class="d-block w-100" alt="Smite">
+          </div>
+          <div class="carousel-item">
+            <img src="https://coverfiles.alphacoders.com/509/50912.jpg" class="d-block w-100" alt="Overwatch">
+          </div>
+          <div class="carousel-item">
+            <img src="https://coverfiles.alphacoders.com/424/42443.jpg" class="d-block w-100" alt="Dota 2">
+          </div>
+          <div class="carousel-item">
+                <img src="https://coverfiles.alphacoders.com/607/60796.png" class="d-block w-100" alt="Battlefield V">
+              </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+<br>
+      <div class="content container">
+            <div class="row">
+                <div class="col-md-12">
 <div class="row">
     
        
-    <div class="col-md-7">
+    <div class="col-md-6">
         <br>
         <button type="button" class="btn btn-primary"><h4><a href="{% url 'event_list' %}">Hier geht's zu den Events</a></h4></button>
         <br>
         <br>
+        <br>
+        
         <div class="row">
 
-            <div class="col-md-5 col-md-offset-2">
-            <h3>Our Sponsor</h3>
+                <div class="col-md-4.9 col-md-offset-2">
+                        <div id="carousel2" class="carousel slide carousel-fade" data-ride="carousel">
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img src="https://i.ytimg.com/vi/ZIwa-aWui8Y/maxresdefault.jpg" class="d-block w-100" alt="Fortnite">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="https://www.streamingwelt.com/wp-content/uploads/twitchcon-europe-2019-1.jpg" class="d-block w-100" alt="Dota 2">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="https://i.ytimg.com/vi/fxwqHILD7Nw/maxresdefault.jpg" class="d-block w-100" alt="CSGO">
+                                  </div>
+                                  <div class="carousel-item">
+                                        <img src="https://i.ytimg.com/vi/4ktDLYR6d5A/maxresdefault.jpg" class="d-block w-100" alt="CSGO">
+                                    </div>
+                                    <div class="carousel-item">
+                                            <img src="https://static.giga.de/wp-content/uploads/2016/08/Gamescom-Besuch-lohnt_Thumbnail_1920x1080px.jpg" class="d-block w-100" alt="CSGO">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div>
+                        </div></div></div>
+
+            <div class="col-md-4 offset-md-1">
+            <h1>Our Sponsor</h1>
             <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
                 <div id="SamplePlayerDivID"></div>
                 <script type="text/javascript">
                 var options = {
-                width: 454,
-                height: 280,
+                width: 354,
+                height: 212,
                 channel: "lck",
                 };
                 var player = new Twitch.Player("SamplePlayerDivID", options);
@@ -29,44 +95,40 @@
                 <div id="SamplePlayerDivID"></div>
                 <script type="text/javascript">
                 var options = {
-                width: 454,
-                height: 280,
+                width: 354,
+                height: 212,
                 channel: "NoWay4u_Sir",
                 };
                 var player = new Twitch.Player("SamplePlayerDivID", options);
                 player.setVolume(0.5);
                 </script>
-                 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-                 <div id="SamplePlayerDivID"></div>
-                 <script type="text/javascript">
-                 var options = {
-                 width: 454,
-                 height: 280,
-                 channel: "Dathrix",
-                 };
-                 var player = new Twitch.Player("SamplePlayerDivID", options);
-                 player.setVolume(0.5);
-                 </script>
+                 
                 
                 </div>
-        </div>
+        
+        <br> <br> <br> <br> <br>
     </div>
     
         
-                <div class="col-md-5">
+                
+                              
+
+                             
+                <div class="row">
+                        <div class="col-xs-8">
                         <h1>Blogposts</h1>
                         <br>
-                        <br>
-                        <br>
+                        
+                        
                 
                 
                         {% for post in posts reversed %}
-                        <div class="bg-warning"> 
+                        <div class="bg-light"> 
                             <div class="post">
                                 <div class="date">
                                     {{ post.published_date }}
                                 </div>
-                                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                                <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
                             <p> Game: {{ post.game|linebreaksbr }}</p> 
                             <p> Genre: {{ post.genre|linebreaksbr }}</p> 
                             <p> Gamepublisher: {{ post.gamepublisher|linebreaksbr }}</p> 
@@ -82,5 +144,5 @@
                         {% endfor %}
                     </div>
         </div>
-
+</div></div></div>
 {% endblock %}
