--- a/events/templates/events/event_base.html
+++ b/events/templates/events/event_base.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link href="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 <script src="//cdn.bootcss.com/jquery/3.0.0/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -23,7 +24,7 @@
                                         <img src="https://d2q79iu7y748jz.cloudfront.net/s/_squarelogo/a1d18cba8a6b1db5979d854463b70a56" width="100" height="100">
                                         
                                     </div>
-                                    <div class="col-xs-7">
+                                    <div class="col-xs-6">
                                         <h1><a href="/">Gamers Paradise</a></h1>
                                     </div>
                                     <div class="col-xs-2">
@@ -34,20 +35,37 @@
                                     
                             </div>
                     </div>
+                </br>
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                            <a class="navbar-brand" href="{% url 'post_list' %}"> Zurück zur Homepage </a>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                              <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                              <div class="navbar-nav">
+                                <a class="nav-item nav-link" href="{% url 'post_list' %}"> Zu den Posts </a>
+                                <a class="nav-item nav-link" href="{% url 'event_list' %}"> Zu den Events </a>
+                                
+                                {% if user.is_authenticated %}<a class="nav-item nav-link" href="{% url 'post_new' %}"> Blogeintrag erstellen </a>{% endif %}
+                                {% if user.is_authenticated %}<a class="nav-item nav-link" href="{% url 'event_new' %}"> Event erstellen </a>{% endif %}
+                              </div>
+                            </div>
+                          </nav>
                 </div>
-        <br>
+        
 
        
 
 
-
+                    {% block content %}
+                    {% endblock %}
         <div class="content container">
             <div class="row">
                 <div class="col-md-12">
-                    {% block content %}
-                    {% endblock %}
+                    
                 </div>
             </div>
         </div>
+        
     </body>
 </html>
