--- a/events/templates/events/event_edit.html
+++ b/events/templates/events/event_edit.html
@@ -3,8 +3,8 @@
 {% block content %}
 <div class="container">
         <div class="row">
-                <div class="col-md-10">
-                     <h2>New Event</h2>
+                <div class="col-md-9">
+                     <h1>Neues Event</h1>
                 <form method="POST" class="event-form">{% csrf_token %}
                         <script>
                                 $(function () {
