--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -1,82 +1,145 @@
 {% extends 'events/event_base.html' %}
 
 {% block content %}
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://coverfiles.alphacoders.com/390/39090.jpg" class="d-block w-100" alt="Smite">
+          </div>
+          <div class="carousel-item">
+            <img src="https://coverfiles.alphacoders.com/509/50912.jpg" class="d-block w-100" alt="Overwatch">
+          </div>
+          <div class="carousel-item">
+            <img src="https://coverfiles.alphacoders.com/424/42443.jpg" class="d-block w-100" alt="Dota 2">
+          </div>
+          <div class="carousel-item">
+                <img src="https://coverfiles.alphacoders.com/607/60796.png" class="d-block w-100" alt="Battlefield V">
+              </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+<br>
+      <div class="content container">
+            <div class="row">
+                <div class="col-md-12">
 <div class="row">
     
-    
-    <div class="col-md-7">
+       
+    <div class="col-md-6">
         <br>
         <button type="button" class="btn btn-primary"><h4><a href="{% url 'post_list' %}">Zurück zu den Blogposts</a></h4></button>
         <br>
         <br>
+        <br>
+        
         <div class="row">
-   
-    
-        <div class="col-md-5 col-md-offset-2">
-            <h3>Our Sponsor</h3>
+
+                <div class="col-md-4.9 col-md-offset-2">
+                        <div id="carousel2" class="carousel slide carousel-fade" data-ride="carousel">
+                                <div class="carousel-inner">
+                                  <div class="carousel-item active">
+                                    <img src="https://i.ytimg.com/vi/ZIwa-aWui8Y/maxresdefault.jpg" class="d-block w-100" alt="Fortnite">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="https://www.streamingwelt.com/wp-content/uploads/twitchcon-europe-2019-1.jpg" class="d-block w-100" alt="Dota 2">
+                                  </div>
+                                  <div class="carousel-item">
+                                    <img src="https://i.ytimg.com/vi/fxwqHILD7Nw/maxresdefault.jpg" class="d-block w-100" alt="CSGO">
+                                  </div>
+                                  <div class="carousel-item">
+                                        <img src="https://i.ytimg.com/vi/4ktDLYR6d5A/maxresdefault.jpg" class="d-block w-100" alt="CSGO">
+                                    </div>
+                                    <div class="carousel-item">
+                                            <img src="https://static.giga.de/wp-content/uploads/2016/08/Gamescom-Besuch-lohnt_Thumbnail_1920x1080px.jpg" class="d-block w-100" alt="CSGO">
+                                    </div>
+                                </div>
+                                <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="sr-only">Next</span>
+                                </a>
+                              </div>
+                        </div></div></div>
+
+            <div class="col-md-4 offset-md-1">
+            <h1>Our Sponsor</h1>
             <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
                 <div id="SamplePlayerDivID"></div>
                 <script type="text/javascript">
                 var options = {
-                width: 454,
-                height: 280,
+                width: 354,
+                height: 212,
                 channel: "lck",
                 };
                 var player = new Twitch.Player("SamplePlayerDivID", options);
                 player.setVolume(0.5);
                 </script>
+                
                 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
                 <div id="SamplePlayerDivID"></div>
                 <script type="text/javascript">
                 var options = {
-                width: 454,
-                height: 280,
+                width: 354,
+                height: 212,
                 channel: "NoWay4u_Sir",
                 };
                 var player = new Twitch.Player("SamplePlayerDivID", options);
                 player.setVolume(0.5);
                 </script>
-                 <script src= "https://player.twitch.tv/js/embed/v1.js"></script>
-                 <div id="SamplePlayerDivID"></div>
-                 <script type="text/javascript">
-                 var options = {
-                 width: 454,
-                 height: 280,
-                 channel: "Dathrix",
-                 };
-                 var player = new Twitch.Player("SamplePlayerDivID", options);
-                 player.setVolume(0.5);
-                 </script>
+                 
                 
-                <br>
                 </div>
-        </div>
+        
+        <br> <br> <br> <br> <br>
     </div>
-                <div class="col-md-5">
-                        <h1>Events</h1>
-                        <br>
-                        <br>
-                        <br>
-                
-                
-                        {% for event in events reversed %}
-                        <div class="bg-warning"> 
-                            <div class="event">
-                                <div class="date">
-                                    {{ event.published_date }}
-                                </div>
-                                <h1><a href="{% url 'event_detail' pk=event.pk %}">{{ event.title }}</a></h1>
-                            <p> Zeitpunkt: {{ event.zeitpunkt|linebreaksbr }}</p> 
-                            <p> Author: {{ event.author|linebreaksbr }}</p> 
-                            <p> Twitch-Link: {{ event.twitchlink|linebreaksbr }}</p> 
-                            <p>{{ event.text|linebreaksbr }}</p>
-                           
-                            </div>
-                        </div> 
-                        <br>
-                        <br>
-                        {% endfor %}
+    
+    <div class="row">
+            <div class="col-xs-8">
+            <h1>Events</h1>
+            <br>
+            {% for event in events reversed %}
+            <div class="bg-light"> 
+                <div class="event">
+                    <div class="date">
+                        {{ event.published_date }}
                     </div>
-        </div>
+                    <h2><a href="{% url 'event_detail' pk=event.pk %}">{{ event.title }}</a></h2>
+                <p> Zeitpunkt: {{ event.zeitpunkt|linebreaksbr }}</p> 
+                <p> Author: {{ event.author|linebreaksbr }}</p> 
+                <p> Twitch-Link: {{ event.twitchlink|linebreaksbr }}</p> 
+                <p>{{ event.text|linebreaksbr }}</p>
 
+  
+            </div>
+        </div> 
+        <br>
+        <br>
+        {% endfor %}
+    </div>
+</div>
+</div></div></div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 {% endblock %}
+
+
+
+
+
